[package]
name = "file_searcher"
version = "0.1.0"
authors = ["Mader Noob <madernoob@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.0",features=["stream"]}
futures = "0.3.12"
async-recursion = "0.3.1"
tokio = {version="1.0.2",features=["macros","rt-multi-thread"]}
